--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="image/img2.jpg" alt="My image">
+                    <img src="img2.jpg" alt="My image">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
